--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -161,8 +161,8 @@
 @media only screen and (max-width: 1025px) {
   .career-section {
     padding: 70px 0px;
-    padding-top: 220px;
-    margin-top: -200px;
+    padding-top: 50px;
+    margin-top: 0px;
     margin-bottom: 0;
   }
 }
@@ -206,8 +206,8 @@
     padding-left: 5%;
   }
   .career-section {
-    padding-top: 90px;
-    margin-top: -70px;
+    padding-top: 50px;
+    margin-top: 0px;
 
     align-items: start;
     place-items: inherit;
