--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -186,8 +186,8 @@
 .landing-intro h1 {
   margin: 0;
   letter-spacing: 2px;
-  font-size: 28px;
-  line-height: 28px;
+  font-size: 24px;
+  line-height: 26px;
   font-weight: 500;
   font-family: "Geist", sans-serif;
 }
@@ -215,17 +215,17 @@
 
 .landing-info h2 {
   margin: 0;
-  margin-top: -20px;
+  margin-top: -15px;
   margin-left: 20px;
   font-family: "Geist", sans-serif;
   font-weight: 600;
-  font-size: 32px;
-  line-height: 40px;
+  font-size: 24px;
+  line-height: 30px;
   position: relative;
   display: flex;
   flex-wrap: nowrap;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 1.5px;
 }
 
 .landing-h2-info-1 {
@@ -235,7 +235,7 @@
 
 h2.landing-info-h2 {
   color: #c481ff;
-  font-size: 42px;
+  font-size: 32px;
   width: 120%;
   margin: 0;
   font-family: "Geist", sans-serif;
