--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -317,9 +317,9 @@
     flex-direction: column;
   }
   .what-box h2 {
-    margin: 50px 0;
-    font-size: 55px;
-    line-height: 53px;
+    margin: 30px 0;
+    font-size: 40px;
+    line-height: 42px;
   }
   .what-box:first-child {
     justify-content: left;
@@ -328,8 +328,8 @@
     height: 600px;
   }
   .what-box {
-    width: 500px;
-    max-width: calc(100% - 50px);
+    width: 100%;
+    max-width: calc(100% - 40px);
     margin: auto;
   }
   .what-content {
