--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -235,7 +235,11 @@
   }
 }
 
-/* @media only screen and (max-width: 900px) {
+@media only screen and (max-width: 900px) {
+  .work-section {
+    height: auto;
+    padding-bottom: 50px;
+  }
   .work-image img {
     max-height: 200px;
   }
@@ -245,8 +249,22 @@
   }
   .work-box {
     gap: 20px;
+    width: 100%;
+    max-width: 100vw;
+    box-sizing: border-box;
+    padding: 30px 15px;
+    border-right: none;
+    border-bottom: 1px solid #363636;
   }
-} */
+  .work-flex {
+    flex-direction: column;
+    margin-left: 0;
+    padding-right: 0;
+  }
+  .work-flex .work-box:nth-child(even) {
+    flex-direction: column;
+  }
+}
 @media only screen and (max-width: 1025px) {
   .work-container {
     align-content: normal;
